Restarting with my own idea. Creating a dot that will be modifiable by the user in realtime.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -60,3 +60,16 @@ p, ul {
 ul {
   padding-left: 30px;
 }
+
+.dot {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background: #F00;
+}
