--- a/public/css/base.css
+++ b/public/css/base.css
@@ -73,3 +73,14 @@ ul {
   border-radius: 100%;
   background: #F00;
 }
+.dotForm {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding: 1rem;
+  background: #CCC;
+  text-align: center;
+}
