--- a/public/css/base.css
+++ b/public/css/base.css
@@ -61,6 +61,19 @@ ul {
   padding-left: 30px;
 }
 
+input {
+  padding: 6px;
+  font-size: 1.2rem;
+}
+
+input[type=submit] {
+  border-radius: 4px;
+  background: #7DD12A;
+  border: 0px;
+  padding: 10px 30px;
+  border-bottom: 3px solid #56961B;
+}
+
 .dot {
   position: absolute;
   left: 0;
@@ -72,6 +85,7 @@ ul {
   height: 100px;
   border-radius: 100%;
   background: #F00;
+  transition: 1s;
 }
 .dotForm {
   position: absolute;
